# amf

./: Cargo.toml  README.md
benches/: alloc.rs
examples/: decode_amf0.rs
src/: amf0.rs  amf3.rs  error.rs  lib.rs
src/amf0/: decode.rs  encode.rs  mod.rs
src/amf3/: decode.rs  encode.rs  mod.rs
