[package]
name = "amf"
version = "0.1.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust Implementation of AMF (Action Media Format)"
documentation = "https://docs.rs/amf/"
homepage = "https://github.com/sile/amf"
repository = "https://github.com/sile/amf"
readme = "README.md"
keywords = ["AMF"]
license = "MIT"

[dependencies]
byteorder = "0.5"
