[package]
name = "amf"
version = "0.3.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust Implementation of AMF (Action Media Format)"
documentation = "https://docs.rs/amf/"
homepage = "https://github.com/sile/amf"
repository = "https://github.com/sile/amf"
readme = "README.md"
keywords = ["AMF"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/amf"}
codecov = {repository = "sile/amf"}

[dependencies]
byteorder = "1"
