[package]
name = "amf"
version = "1.0.0"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "A Rust Implementation of AMF (Action Media Format)"
documentation = "https://docs.rs/amf/"
homepage = "https://github.com/sile/amf"
repository = "https://github.com/sile/amf"
readme = "README.md"
keywords = ["AMF"]
license = "MIT OR Apache-2.0"
edition = "2021"

[badges]
coveralls = {repository = "sile/amf"}

[dependencies]
byteorder = "1"
